After first check

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
     <!-- ШАПКА -->
     <header class="page-header">
       <a class="logo" href="index.html">
-        <img src="images/logo.svg" width="139" height="70" alt="Логотип">
+        <img src="images/logo.svg" width="139" height="70" alt="Логотип сайта с надписью City of Sedona.">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -27,20 +27,20 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link navigation-active-link" href="catalog.html">
+            <a class="navigation-link navigation-active-link">
               Гостиницы
             </a>
           </li>
         </ul>
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
-            <a href="" class="navigation-link search">
+            <a href="#" class="navigation-link search">
               <span class="visually-hidden">Поиск</span>
               <svg class="navigation-link-icon" fill="currentColor" width="19" height="19" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path d="m18.16 17.05-3.71-3.7c1-1.3 1.7-3 1.7-4.9 0-4.4-3.6-8-8.02-8a8.12 8.12 0 0 0-8.02 8.1c0 4.4 3.6 8 8.02 8 1.8 0 3.51-.6 4.91-1.7l3.71 3.7 1.4-1.5Zm-10.03-2.5c-3.3 0-6.02-2.7-6.02-6a6.03 6.03 0 0 1 12.04 0c0 3.3-2.71 6-6.02 6Z"/></svg>
             </a>
           </li>
           <li class="navigation-item">
-            <a href="" class="navigation-link favorites">
+            <a href="#" class="navigation-link favorites">
               <span class="visually-hidden">Гостиниц в избранном:</span>
               <svg class="navigation-link-icon" fill="currentColor" width="18" height="17" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path d="M9.58 17c-.3 0-.6-.1-.8-.4-5.42-6.1-6.72-7.5-7.03-7.9A5.4 5.4 0 0 1 6.16 0c1.31 0 2.51.5 3.52 1.3a5.47 5.47 0 0 1 9.03 4.1c0 1.3-.5 2.5-1.31 3.4l-7.02 7.9c-.2.2-.4.3-.8.3ZM3.56 7.5c.3.4 3.51 4 6.12 6.9l6.21-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.71 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4a3.7 3.7 0 0 0-2.71-1.3c-1.8 0-3.31 1.5-3.31 3.3-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z"/></svg>
               <span class="favorites-counter">
@@ -49,7 +49,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a href="catalog.html" class="button navigation-search-button">
+            <a href="#" class="button navigation-search-button">
               Хочу сюда
             </a>
           </li>
@@ -120,7 +120,6 @@
                     <input class="control-input visually-hidden" type="radio" name="accommodation-type" value="motel">
                     <span class="control-mark"></span>
                     <span class="control-label">Мотель</span>
-
                   </label>
                 </li>
                 <li class="filter-form-item">
@@ -172,7 +171,7 @@
           </select>
           <ul class="view-switcher-list">
             <li class="view-item">
-              <a href="#" class="button view-button view-button-current">
+              <a class="button view-button view-button-current" href="#">
                 <span class="visually-hidden">Показать таблицей</span>
                 <svg class="view-button-icon" width="16" height="14" fill="none" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path d="M4 0H0v6h4V0ZM16 0h-4v6h4V0ZM10 0H6v6h4V0ZM4 8H0v6h4V8ZM16 8h-4v6h4V8ZM10 8H6v6h4V8Z" fill="#000"/></svg>
               </a>
@@ -197,7 +196,7 @@
           <li class="hotel-item">
             <div class="hotel-item-content">
               <a href="#" class="hotel-link">
-                <img src="images/hotels/hotel-1-1.jpg" width="300" height="211" alt="красивый вид из пещеры на звездное небо" class="hotel-image">
+                <img src="images/hotels/hotel-1-1.jpg" width="300" height="211" alt="Красивый вид из пещеры на звездное небо." class="hotel-image">
               </a>
               <a href="#" class="hotel-link">
                 <h3 class="hotel-name">Amara Resort & Spa</h3>
@@ -217,7 +216,7 @@
           <li class="hotel-item">
             <div class="hotel-item-content">
               <a href="#" class="hotel-link">
-                <img src="images/hotels/hotel-1-2.jpg" width="300" height="211" alt="горный хребет, над которым радуга" class="hotel-image">
+                <img src="images/hotels/hotel-1-2.jpg" width="300" height="211" alt="Горный хребет, над которым радуга." class="hotel-image">
               </a>
               <a href="#" class="hotel-link">
                 <h3 class="hotel-name">Villas at Poco Diablo</h3>
@@ -237,7 +236,7 @@
           <li class="hotel-item">
             <div class="hotel-item-content">
               <a href="#" class="hotel-link">
-                <img src="images/hotels/hotel-1-3.jpg" width="300" height="211" alt="скала в пустыне" class="hotel-image">
+                <img src="images/hotels/hotel-1-3.jpg" width="300" height="211" alt="Скала в пустыне." class="hotel-image">
               </a>
               <a href="#" class="hotel-link">
                 <h3 class="hotel-name">Desert Quail Inn</h3>
@@ -257,7 +256,7 @@
           <li class="hotel-item">
             <div class="hotel-item-content">
               <a href="#" class="hotel-link">
-                <img src="images/hotels/hotel-1.jpg" width="300" height="211" alt="горная гряда на закате" class="hotel-image">
+                <img src="images/hotels/hotel-1.jpg" width="300" height="211" alt="Горная гряда на закате." class="hotel-image">
               </a>
               <a href="#" class="hotel-link">
                 <h3 class="hotel-name">GreenTree Inn</h3>
@@ -319,7 +318,7 @@
             <span class="visually-hidden">Введите ваш e-mail:</span>
             <input name="newsletter-email" type="email" placeholder="Ваш e-mail">
           </label>
-          <button class="button subscribe-button">Подписаться</button>
+          <button class="button subscribe-button" type="button">Подписаться</button>
         </form>
       </section>
     </main>
