--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <!-- ШАПКА -->
     <header class="page-header">
       <a class="logo" href="index.html">
-        <img src="images/logo.svg" width="139" height="70" alt="Логотип">
+        <img src="images/logo.svg" width="139" height="70" alt="Логотип сайта с надписью City of Sedona.">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link navigation-active-link" href="index.html">
+            <a class="navigation-link navigation-active-link">
               Главная
             </a>
           </li>
@@ -34,13 +34,13 @@
         </ul>
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
-            <a href="" class="navigation-link search">
+            <a href="#" class="navigation-link search">
               <span class="visually-hidden">Поиск</span>
               <svg class="navigation-link-icon" fill="currentColor" width="19" height="19" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path d="m18.16 17.05-3.71-3.7c1-1.3 1.7-3 1.7-4.9 0-4.4-3.6-8-8.02-8a8.12 8.12 0 0 0-8.02 8.1c0 4.4 3.6 8 8.02 8 1.8 0 3.51-.6 4.91-1.7l3.71 3.7 1.4-1.5Zm-10.03-2.5c-3.3 0-6.02-2.7-6.02-6a6.03 6.03 0 0 1 12.04 0c0 3.3-2.71 6-6.02 6Z"/></svg>
             </a>
           </li>
           <li class="navigation-item">
-            <a href="" class="navigation-link favorites">
+            <a href="#" class="navigation-link favorites">
                 <span class="visually-hidden">Гостиниц в избранном:</span>
                 <svg class="navigation-link-icon" fill="currentColor" width="18" height="17" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path d="M9.58 17c-.3 0-.6-.1-.8-.4-5.42-6.1-6.72-7.5-7.03-7.9A5.4 5.4 0 0 1 6.16 0c1.31 0 2.51.5 3.52 1.3a5.47 5.47 0 0 1 9.03 4.1c0 1.3-.5 2.5-1.31 3.4l-7.02 7.9c-.2.2-.4.3-.8.3ZM3.56 7.5c.3.4 3.51 4 6.12 6.9l6.21-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.71 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4a3.7 3.7 0 0 0-2.71-1.3c-1.8 0-3.31 1.5-3.31 3.3-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z"/></svg>
                 <span class="favorites-counter">
@@ -49,7 +49,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a href="catalog.html" class="button navigation-search-button">
+            <a href="#" class="button navigation-search-button">
               Хочу сюда
             </a>
           </li>
@@ -81,7 +81,7 @@
                   <p class="advantages-desc">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
                 </div>
               </div>
-              <img class="true-town-image" src="images/photo-1.jpg" width="800" height="384" alt="Улица с зеленым домом и американскими флажками">
+              <img class="true-town-image" src="images/photo-1.jpg" width="800" height="384" alt="Улица с зеленым домом и американскими флажками.">
             </div>
             <div class="advantages-more-wrapper">
               <ul class="advantages-more-list">
@@ -114,7 +114,7 @@
                 <p class="advantages-desc">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
             </div>
-            <img src="images/photo-2.jpg" width="800" height="384" alt="Узкая скала в каньоне, похожая на мост">
+            <img src="images/photo-2.jpg" width="800" height="384" alt="Узкая скала в каньоне, похожая на мост.">
           </li>
           <li class="advantages-item">
             <div class="advantages-item-wrapper">
@@ -161,7 +161,7 @@
             <span class="visually-hidden">Введите ваш e-mail:</span>
             <input name="newsletter-email" type="email" placeholder="Ваш e-mail">
           </label>
-          <button class="button subscribe-button">Подписаться</button>
+          <button class="button subscribe-button" type="button">Подписаться</button>
         </form>
       </section>
     </main>
@@ -205,11 +205,11 @@
       </section>
     </footer>
 
-    <div class="modal-container">
+    <div class="modal-container modal-container-close">
       <div class="modal modal-search">
-        <button class="modal-close-button">
+        <button class="modal-close-button" type="button">
           <span class="visually-hidden">Закрыть</span>
-          <svg class="close-button-icon" width="15" height="14" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M14.11 1.3 12.82 0l-5.7 5.7L1.4 0 .1 1.3 5.82 7l-5.7 5.7L1.4 14l5.7-5.7 5.71 5.7 1.3-1.3L8.4 7l5.7-5.7Z"/></svg>
+          <svg class="close-button-icon" width="15" height="14" fill="currentColor" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path d="M14.11 1.3 12.82 0l-5.7 5.7L1.4 0 .1 1.3 5.82 7l-5.7 5.7L1.4 14l5.7-5.7 5.71 5.7 1.3-1.3L8.4 7l5.7-5.7Z"/></svg>
         </button>
         <section class="modal-content">
           <h2 class="title modal-search-title">Поиск гостиницы в Седоне</h2>
@@ -227,8 +227,8 @@
             <p class="field-group number-of-guests adult-number">
               <label class="modal-search-label" for="adult-number">Взрослые:</label>
               <span class="modal-wrapper">
-                <input class="modal-search-field" type="number" id="adult-number" name="search-adult-number" placeholder="2">
                 <button type="button" class="modal-counter-button minus"></button>
+                <input class="modal-search-field" type="number" id="adult-number" name="search-adult-number" placeholder="2">
                 <button type="button" class="modal-counter-button plus"></button>
               </span>
             </p>
@@ -237,14 +237,14 @@
                 <label class="modal-search-label" for="kids-number">Дети:</label>
                 <span class="tooltip">
                   <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label">
-                    <svg class="tooltip-icon" width="3" height="12" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M.11 0h2v2h-2V0Zm2 12h-2V3h2v9Z"/></svg>
+                    <svg class="tooltip-icon" width="3" height="12" fill="currentColor" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M.11 0h2v2h-2V0Zm2 12h-2V3h2v9Z"/></svg>
                   </button>
                   <span class="tooltip-text" role="tooltip" id="tooltip-label">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
                 </span>
               </span>
               <span class="modal-wrapper">
-                <input class="modal-search-field" type="number" id="kids-number" name="search-kids-number" placeholder="1">
                 <button type="button" class="modal-counter-button minus"></button>
+                <input class="modal-search-field" type="number" id="kids-number" name="search-kids-number" placeholder="1">
                 <button type="button" class="modal-counter-button plus"></button>
               </span>
             </p>
