--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Каталог гостиниц в Седоне</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
   <div class="container">
@@ -170,19 +171,19 @@
             <option value="expensive">Сначала дорогое</option>
           </select>
           <ul class="view-switcher-list">
-            <li class="view-item">
+            <li>
               <a class="button view-button view-button-current" href="#">
                 <span class="visually-hidden">Показать таблицей</span>
                 <svg class="view-button-icon" width="16" height="14" fill="none" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path d="M4 0H0v6h4V0ZM16 0h-4v6h4V0ZM10 0H6v6h4V0ZM4 8H0v6h4V8ZM16 8h-4v6h4V8ZM10 8H6v6h4V8Z" fill="#000"/></svg>
               </a>
             </li>
-            <li class="view-item">
+            <li>
               <a class="button view-button" href="#">
                 <span class="visually-hidden">Показать слайдшоу</span>
                 <svg class="view-button-icon" width="16" height="14" fill="none" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path d="M16 12H0v2h16v-2ZM14 2v6H2V2h12Zm2-2H0v10h16V0Z" fill="#000"/></svg>
               </a>
             </li>
-            <li class="view-item">
+            <li>
               <a class="button view-button" href="#">
                 <span class="visually-hidden">Показать списком</span>
                 <svg class="view-button-icon" width="16" height="14" fill="none" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path d="M2 0H0v2h2V0ZM16 0H4v2h12V0ZM2 4H0v2h2V4ZM16 4H4v2h12V4ZM2 8H0v2h2V8ZM16 8H4v2h12V8ZM2 12H0v2h2v-2ZM16 12H4v2h12v-2Z" fill="#000"/></svg>
