Update during check

--- a/index.html
+++ b/index.html
@@ -89,19 +89,19 @@
                 <li class="advantages-item motel">
                   <div class="advantages-item-wrapper">
                     <h4 class="advantages-title">Жильё</h4>
-                    <p class="advantages-desc">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                    <p class="advantages-desc">Рекомендуем пожить <br/>в настоящем мотеле,<br/> всё как в кино!</p>
                   </div>
                 </li>
                 <li class="advantages-item food">
                   <div class="advantages-item-wrapper">
                     <h4 class="advantages-title">Еда</h4>
-                    <p class="advantages-desc">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+                    <p class="advantages-desc">Всегда заказывайте<br/> топовый фирменный бургер,<br/> вы не разочаруетесь!</p>
                   </div>
                 </li>
                 <li class="advantages-item souvenirs">
                   <div class="advantages-item-wrapper">
                     <h4 class="advantages-title">Сувениры</h4>
-                    <p class="advantages-desc">Не только китайского, но и настоящего местного производства!</p>
+                    <p class="advantages-desc">Не только китайского,<br/> но и настоящего местного<br/> производства!</p>
                   </div>
                 </li>
               </ul>
@@ -110,7 +110,7 @@
           <li class="advantages-item devil-bridge">
             <div class="devil-bridge-wrapper">
               <div class="advantages-item-wrapper">
-                <h3 class="advantages-title">Там есть мост дьявола</h3>
+                <h3 class="advantages-title">Там есть<br/> мост дьявола</h3>
                 <span class="advantages-num">— №2 —</span>
                 <p class="advantages-desc">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
@@ -146,7 +146,7 @@
         <div class="search-form-wrapper">
           <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
           <p class="search-form-title title">Заинтересовались?</p>
-          <p class="search-form-desc">Укажите предполагаемые даты поездки,<br/> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <p class="search-form-desc">Укажите предполагаемые даты поездки,<br/> и мы покажем вам лучшие предложения гостиниц в Седоне&nbsp;&nbsp;</p>
           <a href="#" class="button search-form-button">Поиск гостиницы в Cедоне</a>
         </div>
       </section>
