--- a/catalog.html
+++ b/catalog.html
@@ -51,7 +51,7 @@
           </li>
           <li class="navigation-item">
             <a href="#" class="button navigation-search-button">
-              Хочу сюда
+              Хочу сюда!
             </a>
           </li>
         </ul>
@@ -92,7 +92,7 @@
                   <label class="control">
                     <input class="control-input visually-hidden" type="checkbox" name="parking" checked>
                     <span class="control-mark"></span>
-                    <span class="control-label">Паркинг</span>
+                    <span class="control-label">Парковка</span>
                   </label>
                 </li>
                 <li class="filter-form-item">
@@ -138,11 +138,11 @@
               </legend>
               <div class="price-controls">
                 <label class="price-control">
-                  <span class="price-control-text">От</span>
+                  <span class="price-control-text">от</span>
                   <input class="range-input" type="number" name="min-price" placeholder="0">
                 </label>
                 <label class="price-control">
-                  <span class="price-control-text">До</span>
+                  <span class="price-control-text">до</span>
                   <input class="range-input" type="number" name="max-price" placeholder="9000">
                 </label>
                 <div class="range-scale">
@@ -166,9 +166,9 @@
         <div class="view-switcher-wrapper">
           <h2 class="title">Найдено гостиниц: 38</h2>
           <select class="select-control sorting" aria-label="Сортировка">
-            <option value="popular">Сначала популярное</option>
-            <option value="cheap" selected>Сначала дешёвое</option>
-            <option value="expensive">Сначала дорогое</option>
+            <option value="popular">Сначала популярные</option>
+            <option value="cheap" selected>Сначала дешевые</option>
+            <option value="expensive">Сначала дорогие</option>
           </select>
           <ul class="view-switcher-list">
             <li>
@@ -211,7 +211,7 @@
               <div class="hotel-stars stars-4">
                 <span class="visually-hidden">4 звезды</span>
               </div>
-              <span class="hotel-rating">Рейтинг 8,5</span>
+              <span class="hotel-rating">Рейтинг: 8,5</span>
             </div>
           </li>
           <li class="hotel-item">
@@ -231,7 +231,7 @@
               <div class="hotel-stars stars-4">
                 <span class="visually-hidden">4 звезды</span>
               </div>
-              <span class="hotel-rating">Рейтинг 9,2</span>
+              <span class="hotel-rating">Рейтинг: 9,2</span>
             </div>
           </li>
           <li class="hotel-item">
@@ -251,7 +251,7 @@
               <div class="hotel-stars stars-3">
                 <span class="visually-hidden">3 звезды</span>
               </div>
-              <span class="hotel-rating">Рейтинг 6,9</span>
+              <span class="hotel-rating">Рейтинг: 6,9</span>
             </div>
           </li>
           <li class="hotel-item">
@@ -271,7 +271,7 @@
               <div class="hotel-stars stars-2">
                 <span class="visually-hidden">2 звезды</span>
               </div>
-              <span class="hotel-rating">Рейтинг 5,0</span>
+              <span class="hotel-rating">Рейтинг: 5,0</span>
             </div>
           </li>
         </ul>
