--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </li>
           <li class="navigation-item">
             <a href="#" class="button navigation-search-button">
-              Хочу сюда
+              Хочу сюда!
             </a>
           </li>
         </ul>
