--- a/index.html
+++ b/index.html
@@ -217,12 +217,12 @@
           <form class="modal-search-form" action="https://echo.htmlacademy.ru/" method="post">
             <p class="field-group date arrival-date">
               <label class="modal-search-label" for="arrival-date">Дата Заезда:</label>
-              <input class="modal-search-field" type="text" id="arrival-date" name="search-arrival-date" placeholder="Укажите дату">
+              <input class="modal-search-field" type="text" id="arrival-date" name="search-arrival-date" placeholder="27 апреля 2020">
               <span class="error-text">Мы не можем отправить вас в прошлое.</span>
             </p>
             <p class="field-group date depart-date">
               <label class="modal-search-label" for="depart-date">Дата Выезда:</label>
-              <input class="modal-search-field" type="text" id="depart-date" name="search-depart-date" placeholder="Укажите дату">
+              <input class="modal-search-field" type="text" id="depart-date" name="search-depart-date" placeholder="1 сентября 2021">
               <span class="attention-text">На эти даты есть свободные номера. Пока есть.</span>
             </p>
             <p class="field-group number-of-guests adult-number">
