--- a/catalog.html
+++ b/catalog.html
@@ -35,13 +35,13 @@
         </ul>
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
-            <a href="#" class="navigation-link search">
+            <a class="navigation-link search" href="#">
               <span class="visually-hidden">Поиск</span>
               <svg class="navigation-link-icon" fill="currentColor" width="19" height="19" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path d="m18.16 17.05-3.71-3.7c1-1.3 1.7-3 1.7-4.9 0-4.4-3.6-8-8.02-8a8.12 8.12 0 0 0-8.02 8.1c0 4.4 3.6 8 8.02 8 1.8 0 3.51-.6 4.91-1.7l3.71 3.7 1.4-1.5Zm-10.03-2.5c-3.3 0-6.02-2.7-6.02-6a6.03 6.03 0 0 1 12.04 0c0 3.3-2.71 6-6.02 6Z"/></svg>
             </a>
           </li>
           <li class="navigation-item">
-            <a href="#" class="navigation-link favorites">
+            <a class="navigation-link favorites" href="#">
               <span class="visually-hidden">Гостиниц в избранном:</span>
               <svg class="navigation-link-icon" fill="currentColor" width="18" height="17" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path d="M9.58 17c-.3 0-.6-.1-.8-.4-5.42-6.1-6.72-7.5-7.03-7.9A5.4 5.4 0 0 1 6.16 0c1.31 0 2.51.5 3.52 1.3a5.47 5.47 0 0 1 9.03 4.1c0 1.3-.5 2.5-1.31 3.4l-7.02 7.9c-.2.2-.4.3-.8.3ZM3.56 7.5c.3.4 3.51 4 6.12 6.9l6.21-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.71 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4a3.7 3.7 0 0 0-2.71-1.3c-1.8 0-3.31 1.5-3.31 3.3-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z"/></svg>
               <span class="favorites-counter">
@@ -66,7 +66,7 @@
           <h1 class="hotel-filter-title">Гостиницы Седоны</h1>
           <ol class="breadcrumbs">
             <li class="breadcrumbs-item">
-              <a href="index.html" class="breadcrumbs-link breadcrumbs-home">
+              <a class="breadcrumbs-link breadcrumbs-home" href="index.html">
                 <span class="visually-hidden">Главная</span>
               </a>
             </li>
@@ -147,8 +147,8 @@
                 </label>
                 <div class="range-scale">
                   <div class="range-bar" style="left: 10px; width: 216px;">
-                    <button type="button" class="range-toggle toggle-min"></button>
-                    <button type="button" class="range-toggle toggle-max"></button>
+                    <button class="range-toggle toggle-min" type="button"></button>
+                    <button class="range-toggle toggle-max" type="button"></button>
                   </div>
                 </div>
               </div>
@@ -196,18 +196,18 @@
         <ul class="hotel-list">
           <li class="hotel-item">
             <div class="hotel-item-content">
-              <a href="#" class="hotel-link">
-                <img src="images/hotels/hotel-1-1.jpg" width="300" height="211" alt="Красивый вид из пещеры на звездное небо." class="hotel-image">
+              <a class="hotel-link" href="#">
+                <img class="hotel-image" src="images/hotels/hotel-1-1.jpg" width="300" height="211" alt="Красивый вид из пещеры на звездное небо.">
               </a>
-              <a href="#" class="hotel-link">
+              <a class="hotel-link" href="#">
                 <h3 class="hotel-name">Amara Resort & Spa</h3>
               </a>
               <dl class="hotel-price-list">
                 <dt class="accommodation-type">Гостиница</dt>
                 <dd class="hotel-price">От 4000 ₽</dd>
               </dl>
-              <a href="#" class="hotel-about-button button">Подробнее</a>
-              <button type="button" class="hotel-favorites-button button">В избранное</button>
+              <a class="hotel-about-button button" href="#">Подробнее</a>
+              <button class="hotel-favorites-button button" type="button">В избранное</button>
               <div class="hotel-stars stars-4">
                 <span class="visually-hidden">4 звезды</span>
               </div>
@@ -216,18 +216,18 @@
           </li>
           <li class="hotel-item">
             <div class="hotel-item-content">
-              <a href="#" class="hotel-link">
-                <img src="images/hotels/hotel-1-2.jpg" width="300" height="211" alt="Горный хребет, над которым радуга." class="hotel-image">
+              <a class="hotel-link" href="#">
+                <img class="hotel-image" src="images/hotels/hotel-1-2.jpg" width="300" height="211" alt="Горный хребет, над которым радуга.">
               </a>
-              <a href="#" class="hotel-link">
+              <a class="hotel-link" href="#">
                 <h3 class="hotel-name">Villas at Poco Diablo</h3>
               </a>
               <dl class="hotel-price-list">
                 <dt class="accommodation-type">Гостиница</dt>
                 <dd class="hotel-price">От 5000 ₽</dd>
               </dl>
-              <a href="#" class="hotel-about-button button">Подробнее</a>
-              <button type="button" class="hotel-favorites-button button added-favorites-button">В избранном</button>
+              <a class="hotel-about-button button" href="#">Подробнее</a>
+              <button class="hotel-favorites-button button added-favorites-button" type="button">В избранном</button>
               <div class="hotel-stars stars-4">
                 <span class="visually-hidden">4 звезды</span>
               </div>
@@ -236,18 +236,18 @@
           </li>
           <li class="hotel-item">
             <div class="hotel-item-content">
-              <a href="#" class="hotel-link">
-                <img src="images/hotels/hotel-1-3.jpg" width="300" height="211" alt="Скала в пустыне." class="hotel-image">
+              <a class="hotel-link" href="#">
+                <img class="hotel-image" src="images/hotels/hotel-1-3.jpg" width="300" height="211" alt="Скала в пустыне.">
               </a>
-              <a href="#" class="hotel-link">
+              <a class="hotel-link" href="#">
                 <h3 class="hotel-name">Desert Quail Inn</h3>
               </a>
               <dl class="hotel-price-list">
                 <dt class="accommodation-type">Гостиница</dt>
                 <dd class="hotel-price">От 2500 ₽</dd>
               </dl>
-              <a href="#" class="hotel-about-button button">Подробнее</a>
-              <button type="button" class="hotel-favorites-button button">В избранное</button>
+              <a class="hotel-about-button button" href="#">Подробнее</a>
+              <button class="hotel-favorites-button button" type="button">В избранное</button>
               <div class="hotel-stars stars-3">
                 <span class="visually-hidden">3 звезды</span>
               </div>
@@ -256,18 +256,18 @@
           </li>
           <li class="hotel-item">
             <div class="hotel-item-content">
-              <a href="#" class="hotel-link">
-                <img src="images/hotels/hotel-1.jpg" width="300" height="211" alt="Горная гряда на закате." class="hotel-image">
+              <a class="hotel-link" href="#">
+                <img class="hotel-image" src="images/hotels/hotel-1.jpg" width="300" height="211" alt="Горная гряда на закате.">
               </a>
-              <a href="#" class="hotel-link">
+              <a class="hotel-link" href="#">
                 <h3 class="hotel-name">GreenTree Inn</h3>
               </a>
               <dl class="hotel-price-list">
                 <dt class="accommodation-type">Гостиница</dt>
                 <dd class="hotel-price">От 1500 ₽</dd>
               </dl>
-              <a href="#" class="hotel-about-button button">Подробнее</a>
-              <button type="button" class="hotel-favorites-button button">В избранное</button>
+              <a class="hotel-about-button button" href="#">Подробнее</a>
+              <button class="hotel-favorites-button button" type="button">В избранное</button>
               <div class="hotel-stars stars-2">
                 <span class="visually-hidden">2 звезды</span>
               </div>
@@ -314,7 +314,7 @@
           <h2 class="newsletter-title title">Подпишитесь на рассылку</h2>
           <p class="newsletter-desc">Только полезная информация и никакого спама, честное бойскаутское!</p>
         </div>
-        <form action="https://echo.htmlacademy.ru/" method="post" class="newsletter-form">
+        <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
           <label class="newsletter-label newsletter-label-inner">
             <span class="visually-hidden">Введите ваш e-mail:</span>
             <input name="newsletter-email" type="email" placeholder="Ваш e-mail">
@@ -352,11 +352,11 @@
       </section>
       <section>
         <h3 class="visually-hidden">Наш номер телефона</h3>
-        <a href="tel:+78128121212" class="footer-tel">+7 (812) 812-12-12</a>
+        <a class="footer-tel" href="tel:+78128121212">+7 (812) 812-12-12</a>
       </section>
       <section class="footer-copyright">
         <h3 class="visually-hidden">Сайт сделан</h3>
-        <a href="https://htmlacademy.ru" class="copyright-logo">
+        <a class="copyright-logo" href="https://htmlacademy.ru">
           <span class="visually-hidden">Логотип разработчика HTMLAcademy</span>
           <svg class="copyright-logo-icon" width="115" height="34" fill="currentColor" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path d="M0 13.9v2.6h2.5v-2.6H0ZM11.6 5.5c-1.6 0-2.8.7-3.6 1.7h-.1V1h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9ZM26.6 5.8h-4.8V2.1h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V7.8h4.8v-2ZM41.1 5.6c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1V5.8H29v10.6h2V11c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V9.9c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.7c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V1h-2v12.7ZM28.9 20.7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V19.2h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 23c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1V23ZM55.1 20.7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V19.2h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.8c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2V14.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.9c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 18.9c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 28l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z" /></svg>
         </a>
