--- a/catalog.html
+++ b/catalog.html
@@ -82,21 +82,21 @@
               </legend>
               <ul class="filter-form-list">
                 <li class="filter-form-item">
-                  <label class="control">
+                  <label class="control infrastructure-control">
                     <input class="control-input visually-hidden" type="checkbox" name="pool" checked>
                     <span class="control-mark"></span>
                     <span class="control-label">Бассейн</span>
                   </label>
                 </li>
                 <li class="filter-form-item">
-                  <label class="control">
+                  <label class="control infrastructure-control">
                     <input class="control-input visually-hidden" type="checkbox" name="parking" checked>
                     <span class="control-mark"></span>
                     <span class="control-label">Парковка</span>
                   </label>
                 </li>
                 <li class="filter-form-item">
-                  <label class="control">
+                  <label class="control infrastructure-control">
                     <input class="control-input visually-hidden" type="checkbox" name="wi-fi">
                     <span class="control-mark"></span>
                     <span class="control-label">Wi-Fi</span>
