--- a/catalog.html
+++ b/catalog.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="favicon.ico">
   </head>
   <body>
+  <!-- changes for check -->
   <div class="container">
 
     <!-- ШАПКА -->
